--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,8 @@
 .App {
+  width: 360px;
+  height: 640px;
+  border-radius: 28px;
+  background-color: #302d38;
   text-align: center;
 }
 
@@ -14,8 +18,6 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -28,11 +30,45 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h1 {
+  color: #E6E1E5;
+  font-size: 32px;
+  text-align: left;
+  font-weight: 400;
+}
+
+.calendarInput {
+  margin: 18px 24px;
+}
+
+.datePicker {
+  width: 100%;
+}
+
+/* Mode Button */
+.mode-button {
+  box-sizing: border-box;
+}
+
+/* Auto layout */
+.auto-layout {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 8px 12px;
+  gap: 10px;
+  
+  width: 360px;
+  height: 58px;
+  
+  border-bottom: 1px solid #49454F;
+}
+
+/* Inside auto layout */
+.inside-auto-layout { 
+  flex: none;
+  order: 0;
+  align-self: stretch;
+  flex-grow: 0;
 }
