Add ToDate.js module. Add 'start date' and 'number of days' inputs.

--- a/src/App.css
+++ b/src/App.css
@@ -37,11 +37,21 @@ h1 {
   font-weight: 400;
 }
 
-.calendarInput {
+.inputInput {
   margin: 18px 24px;
 }
 
-.datePicker {
+/* Input */
+.inputHeader {
+  width: 100%;
+  border-bottom: 1px solid #49454F;
+}
+
+.inputHeader > h1 {
+  margin: 18px 24px;
+}
+
+.input {
   width: 100%;
 }
 
