Fix header button image. Fill entire width and height of device.

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
-  width: 360px;
-  height: 640px;
+  /* width: 360px; */
+  height: 100vh;
   border-radius: 28px;
   background-color: #302d38;
   text-align: center;
@@ -11,19 +11,18 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
+.appHeader {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  border-bottom: 1px solid #49454F;
+}
+
+.appHeader > img {
+  margin: 18px 0;
 }
 
 .App-link {
@@ -47,12 +46,16 @@ h1 {
   border-bottom: 1px solid #49454F;
 }
 
-.inputHeader > h1 {
+h1 {
   margin: 18px 24px;
 }
 
 .input {
   width: 100%;
+}
+
+img {
+  border: none;
 }
 
 /* Mode Button */
@@ -68,10 +71,8 @@ h1 {
   align-items: center;
   padding: 8px 12px;
   gap: 10px;
-  
-  width: 360px;
+  /* width: 360px; */
   height: 58px;
-  
   border-bottom: 1px solid #49454F;
 }
 
@@ -99,4 +100,14 @@ h1 {
   display: flex;
   align-items: center;
   justify-content: flex-end;
+}
+
+.outputContainer {
+  display: flex;
+}
+
+.outputContainer > h1 {
+  margin-bottom: auto;
+  flex: 1;
+  text-align: center;
 }
