--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@
 }
 
 .appHeader > img {
-  margin: 18px 0;
+  margin: 12px 0 9px;
 }
 
 .App-link {
@@ -42,7 +42,6 @@ h1 {
 
 /* Input */
 .inputHeader {
-  width: 100%;
   border-bottom: 1px solid #49454F;
 }
 
