--- a/src/App.css
+++ b/src/App.css
@@ -31,9 +31,11 @@
 
 h1 {
   color: #E6E1E5;
-  font-size: 32px;
+  font-size: 2em;
   text-align: left;
   font-weight: 400;
+  letter-spacing: 0.02em;
+  line-height: 1.25em;
 }
 
 .inputInput {
