Improve spacing of option elements.

--- a/src/App.css
+++ b/src/App.css
@@ -87,8 +87,11 @@ span.section-title {
 }
 
 .options-container {
+  display: flex;
+  flex-direction: column;
   border-bottom: 1px solid #49454F;
-  margin: 12px 0;
+  margin-top: 24px;
+  gap: 12px;
 }
 
 .options-container--option {
@@ -99,7 +102,7 @@ span.section-title {
 }
 
 .options-container--actions {
-  margin: 12px 24px 12px 18px;
+  margin: 12px 0 12px 0;
   display: flex;
   align-items: center;
   justify-content: flex-end;
