--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,10 @@ span.section-title {
   margin-top: 1.25em;
 }
 
+.input-container--end-date-input {
+  margin-top: 1.25em;
+}
+
 /* Mode Button */
 .mode-button {
   box-sizing: border-box;
