Complete calculateDays.js logic and implement into toDays.js component.

--- a/src/App.css
+++ b/src/App.css
@@ -107,6 +107,10 @@ span.section-title {
   justify-content: flex-end;
 }
 
+.hidden {
+  visibility: hidden;
+}
+
 .output-container {
   flex: 1;
   display: flex;
