--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,7 @@
   height: 600px;
   display: flex;
   flex-direction: column;
-  border-radius: 28px;
-  background-color: #302d38;
+  /* background-color: #302d38; */
   text-align: center;
 }
 
@@ -44,7 +43,8 @@ span.section-title {
 }
 
 .input-container {
-  margin: 0 24px;
+  text-align: left;
+  margin: 18px 24px 0 24px;
 }
 
 /* Input */
@@ -101,7 +101,7 @@ span.section-title {
 }
 
 .options-container--actions {
-  margin: 12px 0 12px 0;
+  margin: 4px 0 0 0;
   display: flex;
   align-items: center;
   justify-content: flex-end;
@@ -119,6 +119,7 @@ span.section-title {
 
 
 span.output-container--output {
+  font-size: 150%;
   margin: auto 0;
   flex: 1;
   text-align: center;
