--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
+  background-color: rgba(48, 45, 56, 0.05);
   border-bottom: 1px solid #49454F;
 }
 
